View Issue Details

IDProjectCategoryView StatusLast Update
0032292Open CASCADEOCCT:Codingpublic2021-12-30 15:09
Reporterkgv Assigned Tobugmaster  
PrioritynormalSeverityintegration request 
Status closedResolutionreopened 
Product Version7.5.0 
Target Version7.7.0Fixed in Version7.6.0 
Summary0032292: Coding Rules - improve HLRBRep_PolyAlgo readability part 1
DescriptionProposed changes in the patch remove a couple of redundant variables - pointers to handles in HLRBRep_PolyAlgo.cxx.
Steps To ReproduceN/A
TagsNo tags attached.
Test case numberNot required

Relationships

related to 0029405 closedsmoskvin Community Modeling Algorithms - Check normal define status in HLRBRep_Data 
child of 0027870 closedapn Open CASCADE Modeling - refactoring of HLR algorithms 

Activities

git

2021-04-10 10:21

administrator   ~0100216

Branch CR32292 has been created by kgv.

SHA-1: d8bbfacf30086ec97872470a1b3e3db3e2c4a307


Detailed log of new commits:

Author: kgv
Date: Sat Apr 10 10:21:33 2021 +0300

    0032292: Coding Rules - improve HLRBRep_PolyAlgo readability part 1
    
    HLRBRep_PolyAlgo::StoreShell() - removed a couple of redundant variables (pointers to handles) and extra iterators.
    Added a couple of missing NULL checks (HLRBRep_PolyAlgo::Normal() now skips CSLib::Normal() in case of no surface).

git

2021-04-10 19:07

administrator   ~0100231

Branch CR32292 has been updated forcibly by kgv.

SHA-1: 67ae634be7b787c5b7d1d09794efd7a99055082a

git

2021-04-10 19:31

administrator   ~0100233

Branch CR32292 has been updated forcibly by kgv.

SHA-1: fb1009d9d4a3d25fef75c6c473ef5016e19a600a

kgv

2021-04-10 20:40

developer   ~0100234

Patch is ready for review
- OCCT: branch CR32292.

http://jenkins-test-12.nnov.opencascade.com:8080/view/CR32292-master-KGV/

msv

2021-04-12 23:22

developer   ~0100267

What about failure of the test bugs xde bug24759 on Windows?

kgv

2021-04-12 23:37

developer   ~0100268

Last edited: 2021-04-12 23:42

> What about failure of the test bugs xde bug24759 on Windows?
This test case is unstable: #32245.

msv

2021-04-12 23:51

developer   ~0100269

For integration:
occt - CR32292
products - none

bugmaster

2021-04-17 13:07

administrator   ~0100386

Combination -
OCCT branch : IR-2021-04-16
master SHA - 1294d5e39ed35dc97b2241956855fe794a03b0d8
a87b7ddc8cb44606b91e3f37113847c3f5f50fdc
Products branch : IR-2021-04-16 SHA - 03c3cb382950144b11c09108f24673216c4e5922
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Debian80-64:
OCCT
Total CPU difference: 17987.850000000446 / 18020.24000000038 [-0.18%]
Products
Total CPU difference: 11564.760000000093 / 11543.43000000007 [+0.18%]
Windows-64-VC14:
OCCT
Total CPU difference: 19496.34375 / 19510.890625 [-0.07%]
Products
Total CPU difference: 12932.890625 / 12891.265625 [+0.32%]


Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2021-04-17 14:02

administrator   ~0100412

Branch CR32292 has been deleted by inv.

SHA-1: fb1009d9d4a3d25fef75c6c473ef5016e19a600a

git

2021-04-17 23:45

administrator   ~0100436

Branch CR32292_2 has been created by kgv.

SHA-1: d9c97185167ef7a05c70d13dd26834f405463d70


Detailed log of new commits:

Author: kgv
Date: Sat Apr 17 22:32:17 2021 +0300

    0032292: Coding Rules - improve HLRBRep_PolyAlgo readability part 2

git

2021-04-18 01:01

administrator   ~0100437

Branch CR32292_2 has been updated forcibly by kgv.

SHA-1: 7d786ea8974691e3fe0c0bf04fd7d4de1246e131

git

2021-04-18 10:58

administrator   ~0100438

Branch CR32292_2 has been updated forcibly by kgv.

SHA-1: cf21374bbf8bc06a648a993717ec91db3361197d

git

2021-04-18 11:36

administrator   ~0100439

Branch CR32292_2 has been updated forcibly by kgv.

SHA-1: 86ccdda292c1c7ad0e529a412a1fecc7975e6a72

git

2021-04-18 12:46

administrator   ~0100440

Branch CR32292_2 has been updated forcibly by kgv.

SHA-1: af47cc659155d8e2e7a5bc79bf826ae7cefa4067

kgv

2021-04-18 18:02

developer   ~0100441

Second patch is ready for review
- OCCT: branch CR32292_2.

http://jenkins-test-12.nnov.opencascade.com:8080/view/CR32292_2-master-KGV/

msv

2021-04-19 16:52

developer   ~0100459

bugmaster

2021-04-25 10:57

administrator   ~0100544

Combination -
OCCT branch : IR-2021-04-23
master SHA - fd2efe5428b3b2b9d300b0612c0a53ee2486ba64
a87b7ddc8cb44606b91e3f37113847c3f5f50fdc
Products branch : IR-2021-04-23 SHA - 740db2b9c0429fd95b1e8cf3790001245aaec02b
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Debian80-64:
OCCT
Total CPU difference: 17901.710000000523 / 17988.35000000045 [-0.48%]
Products
Total CPU difference: 11558.800000000136 / 11564.760000000093 [-0.05%]
Windows-64-VC14:
OCCT
Total CPU difference: 5522.40625 / 5520.953125 [+0.03%]
Products
Total CPU difference: 12871.203125 / 12932.890625 [-0.48%]


Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2021-04-25 12:24

administrator   ~0100564

Branch CR32292_2 has been deleted by inv.

SHA-1: af47cc659155d8e2e7a5bc79bf826ae7cefa4067

git

2021-05-08 15:21

administrator   ~0100827

Branch CR32292_3 has been created by kgv.

SHA-1: bd7c1c2324867c2315d1ebb49bbf55b60d766187


Detailed log of new commits:

Author: kgv
Date: Mon May 3 21:00:18 2021 +0300

    0032292: Coding Rules - improve HLRBRep_PolyAlgo readability part 3
    
    Use typed collections instead Handle(Standard_Transient) values.

kgv

2021-05-10 12:16

developer   ~0100842

Third patch is ready for review
- OCCT: branch CR32292_3.

http://jenkins-test-occt/view/CR32292_3-master-KGV/

msv

2021-05-17 19:57

developer   ~0101113

src/HLRAlgo/HLRAlgo_PolyAlgo.cxx:173
    HLRAlgo_TriangleData& aTD = TData.ChangeValue (otheri);
incorrect indent.

In the class HLRAlgo_PolyShellData, I propose to replace
Handle(NCollection_Shared< NCollection_Array1<Handle(HLRAlgo_PolyData)> >)
with NCollection_Array1<Handle(HLRAlgo_PolyData)>. Current version of Array1 can be simply reset to contain 0 items to indicate that hiding data is not available.

git

2021-05-17 20:11

administrator   ~0101114

Branch CR32292_3 has been updated by kgv.

SHA-1: c7ec511d1c2124692d8790b8cfa6af1230619880


Detailed log of new commits:

Author: kgv
Date: Mon May 17 20:12:26 2021 +0300

    # remarks

git

2021-05-17 20:12

administrator   ~0101115

Branch CR32292_3 has been updated forcibly by kgv.

SHA-1: 731e33613f995c2ba95a9d729e676c04ff32869e

kgv

2021-05-17 21:24

developer   ~0101118

Remarks have been pushed to the branch CR32292_3.

msv

2021-05-18 11:12

developer   ~0101131

For integration:
occt - CR32292_3
products- none

git

2021-05-21 10:37

administrator   ~0101224

Branch CR32292_3 has been updated by kgv.

SHA-1: 13283ba12b02526fe6b64f82bc3b2275f075cdb5


Detailed log of new commits:

Author: kgv
Date: Fri May 21 10:37:46 2021 +0300

    # 0032292 fix build with OCCT_DEBUG

bugmaster

2021-05-22 12:24

administrator   ~0101256

Combination -
OCCT branch : IR-2021-05-21
master SHA - 2aa0a6991da6f767c2a6a4c1d6d720fee35867ce
a87b7ddc8cb44606b91e3f37113847c3f5f50fdc
Products branch : IR-2021-05-21 SHA - e89cefb48fe77db69215a5124b453f69d9db404b
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Debian80-64:
OCCT
Total CPU difference: 17862.650000000373 / 17879.470000000332 [-0.09%]
Products
Total CPU difference: 11535.410000000107 / 11557.880000000083 [-0.19%]
Windows-64-VC14:
OCCT
Total CPU difference: 19361.25 / 19400.171875 [-0.20%]
Products
Total CPU difference: 12920.28125 / 12880.234375 [+0.31%]


Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2021-05-22 13:54

administrator   ~0101273

Branch CR32292_3 has been deleted by mnt.

SHA-1: 13283ba12b02526fe6b64f82bc3b2275f075cdb5

Related Changesets

occt: master 75e1b511

2021-04-10 07:21:33

kgv


Committer: bugmaster Details Diff
0032292: Coding Rules - improve HLRBRep_PolyAlgo readability part 1

HLRBRep_PolyAlgo::StoreShell() - removed a couple of redundant variables (pointers to handles) and extra iterators.
Added a couple of missing NULL checks (HLRBRep_PolyAlgo::Normal() now skips CSLib::Normal() in case of no surface).
Affected Issues
0032292
mod - src/HLRBRep/HLRBRep_PolyAlgo.cxx Diff File

occt: master e186cf15

2021-04-17 19:32:17

kgv


Committer: bugmaster Details Diff
0032292: Coding Rules - improve HLRBRep_PolyAlgo readability part 2

Applied name conventions and dropped tabulation symbols.
Affected Issues
0032292
mod - src/HLRBRep/HLRBRep_PolyAlgo.cxx Diff File
mod - src/HLRBRep/HLRBRep_PolyAlgo.hxx Diff File

occt: master c1ce84dc

2021-05-03 18:00:18

kgv


Committer: bugmaster Details Diff
0032292: Coding Rules - improve HLRBRep_PolyAlgo readability part 3

Use typed collections instead Handle(Standard_Transient) values.
Affected Issues
0032292
mod - src/HLRAlgo/FILES Diff File
mod - src/HLRAlgo/HLRAlgo_PolyAlgo.cxx Diff File
mod - src/HLRAlgo/HLRAlgo_PolyAlgo.hxx Diff File
rm - src/HLRAlgo/HLRAlgo_PolyAlgo.lxx Diff File
mod - src/HLRAlgo/HLRAlgo_PolyInternalData.cxx Diff File
mod - src/HLRAlgo/HLRAlgo_PolyInternalData.hxx Diff File
mod - src/HLRAlgo/HLRAlgo_PolyShellData.cxx Diff File
mod - src/HLRAlgo/HLRAlgo_PolyShellData.hxx Diff File
rm - src/HLRAlgo/HLRAlgo_PolyShellData.lxx Diff File
mod - src/HLRBRep/HLRBRep_PolyAlgo.cxx Diff File
mod - src/HLRBRep/HLRBRep_PolyAlgo.hxx Diff File

Issue History

Date Modified Username Field Change
2021-04-10 10:16 kgv New Issue
2021-04-10 10:16 kgv Assigned To => kgv
2021-04-10 10:21 git Note Added: 0100216
2021-04-10 10:21 kgv Relationship added child of 0027870
2021-04-10 10:22 kgv Product Version => 7.5.0
2021-04-10 19:07 git Note Added: 0100231
2021-04-10 19:31 git Note Added: 0100233
2021-04-10 20:40 kgv Note Added: 0100234
2021-04-10 20:40 kgv Assigned To kgv => msv
2021-04-10 20:40 kgv Status new => resolved
2021-04-12 23:22 msv Note Added: 0100267
2021-04-12 23:37 kgv Note Added: 0100268
2021-04-12 23:42 kgv Note Edited: 0100268
2021-04-12 23:51 msv Note Added: 0100269
2021-04-12 23:51 msv Assigned To msv => bugmaster
2021-04-12 23:51 msv Status resolved => reviewed
2021-04-17 13:07 bugmaster Note Added: 0100386
2021-04-17 13:07 bugmaster Status reviewed => tested
2021-04-17 13:13 bugmaster Test case number => Not required
2021-04-17 13:41 bugmaster Changeset attached => occt master 75e1b511
2021-04-17 13:41 bugmaster Status tested => verified
2021-04-17 13:41 bugmaster Resolution open => fixed
2021-04-17 14:02 git Note Added: 0100412
2021-04-17 23:45 git Note Added: 0100436
2021-04-18 01:01 git Note Added: 0100437
2021-04-18 10:58 git Note Added: 0100438
2021-04-18 11:36 git Note Added: 0100439
2021-04-18 12:46 git Note Added: 0100440
2021-04-18 18:02 kgv Assigned To bugmaster => kgv
2021-04-18 18:02 kgv Status verified => feedback
2021-04-18 18:02 kgv Resolution fixed => reopened
2021-04-18 18:02 kgv Note Added: 0100441
2021-04-18 18:02 kgv Assigned To kgv => msv
2021-04-18 18:02 kgv Status feedback => resolved
2021-04-19 16:52 msv Note Added: 0100459
2021-04-19 16:52 msv Assigned To msv => bugmaster
2021-04-19 16:52 msv Status resolved => reviewed
2021-04-25 10:57 bugmaster Note Added: 0100544
2021-04-25 10:57 bugmaster Status reviewed => tested
2021-04-25 11:55 bugmaster Changeset attached => occt master e186cf15
2021-04-25 11:55 bugmaster Status tested => verified
2021-04-25 12:24 git Note Added: 0100564
2021-05-08 15:21 git Note Added: 0100827
2021-05-10 12:15 kgv Assigned To bugmaster => kgv
2021-05-10 12:15 kgv Status verified => feedback
2021-05-10 12:16 kgv Note Added: 0100842
2021-05-10 12:16 kgv Assigned To kgv => msv
2021-05-10 12:16 kgv Status feedback => resolved
2021-05-17 19:57 msv Note Added: 0101113
2021-05-17 19:57 msv Assigned To msv => kgv
2021-05-17 19:57 msv Status resolved => assigned
2021-05-17 20:11 git Note Added: 0101114
2021-05-17 20:12 git Note Added: 0101115
2021-05-17 21:24 kgv Note Added: 0101118
2021-05-17 21:24 kgv Assigned To kgv => msv
2021-05-17 21:24 kgv Status assigned => resolved
2021-05-18 11:12 msv Note Added: 0101131
2021-05-18 11:12 msv Assigned To msv => bugmaster
2021-05-18 11:12 msv Status resolved => reviewed
2021-05-21 10:37 git Note Added: 0101224
2021-05-22 12:24 bugmaster Note Added: 0101256
2021-05-22 12:24 bugmaster Status reviewed => tested
2021-05-22 12:38 bugmaster Changeset attached => occt master c1ce84dc
2021-05-22 12:38 bugmaster Status tested => verified
2021-05-22 13:54 git Note Added: 0101273
2021-09-01 16:09 kgv Relationship added related to 0029405
2021-12-30 15:09 szy Target Version 7.6.0 => 7.7.0